--- a/space1.css
+++ b/space1.css
@@ -6,6 +6,11 @@ body {
 
 .frame{
 	background-color: rgba(0,128,0,0.4);
+	width: 620px;
+	margin: auto;
+	padding-top: 20px;
+	padding-bottom: 30px;
+
 	
 	/* put css-rules in this ccs-block here below */
 	
@@ -14,6 +19,12 @@ body {
 h1{
 	background-color: rgba(0,32,0,0.4);
 	line-height: 40px;
+	margin: 10px 0 20px 0;
+	padding: 20px 0 20px 30px;
+	margin: auto;
+	margin-bottom: 30px;
+	width: 570px;
+
 	
 	/* put css-rules in this ccs-block here below */
 	
@@ -21,6 +32,14 @@ h1{
 
 h2 {
 	line-height: 30px;
+	width: 574px;
+	border: 4px solid purple;
+	margin: auto;
+	margin-top: 10px;
+	padding-top: 6px;
+	padding-bottom: 6px;
+	padding-left: 20px;
+
 	
 	/* put css-rules in this ccs-block here below */
 	
@@ -29,6 +48,11 @@ h2 {
 p{
 	background-color: rgba(256,256,0,0.4);
 	line-height: 20px;
+	margin: 10px 0 10px 0;
+	padding: 10px 10px; 0 0;
+	width: 580px;
+	margin: auto;
+	margin-top: 10px;
 	
 	/* put css-rules in this ccs-block here below */
 
